--- a/qa_assignment/.classpath
+++ b/qa_assignment/.classpath
@@ -2,8 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="unittest"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="src" path="selenium"/>
 	<classpathentry kind="lib" path="lib/ecj-4.15.jar"/>
 	<classpathentry kind="lib" path="lib/jasper-el.jar"/>
 	<classpathentry kind="lib" path="lib/tomcat-i18n-de.jar"/>
@@ -44,5 +43,19 @@
 	<classpathentry kind="lib" path="lib/org.junit_4.13.0.v20200204-1500.jar"/>
 	<classpathentry kind="lib" path="lib/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
 	<classpathentry kind="lib" path="lib/easymock-4.2.jar"/>
+	<classpathentry kind="lib" path="lib/client-combined-4.0.0-alpha-2-sources.jar"/>
+	<classpathentry kind="lib" path="lib/client-combined-4.0.0-alpha-2.jar"/>
+	<classpathentry kind="lib" path="lib/byte-buddy-1.9.12.jar"/>
+	<classpathentry kind="lib" path="lib/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/failureaccess-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/guava-27.1-jre.jar"/>
+	<classpathentry kind="lib" path="lib/listenablefuture-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/okhttp-3.14.0.jar"/>
+	<classpathentry kind="lib" path="lib/okio-1.17.3.jar"/>
+	<classpathentry kind="lib" path="lib/opentracing-api-0.33.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentracing-noop-0.33.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentracing-tracerresolver-0.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/opentracing-util-0.33.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
