--- a/qa_assignment/build.xml
+++ b/qa_assignment/build.xml
@@ -62,6 +62,24 @@
     	<pathelement location="${basedir}/lib/easymock-4.2.jar"/>
     	<pathelement location="${basedir}/lib/servlet-api.jar"/>
     </path>	
+    <path id="Selenium.libraryclasspath">
+        <pathelement location="build/selenium/classes"/>
+        <pathelement location="${basedir}/lib/client-combined-4.0.0-alpha-2-sources.jar"/>
+    	<pathelement location="${basedir}/lib/client-combined-4.0.0-alpha-2.jar"/>
+    	<pathelement location="${basedir}/lib/byte-buddy-1.9.12.jar"/>
+    	<pathelement location="${basedir}/lib/commons-exec-1.3.jar"/>
+    	<pathelement location="${basedir}/lib/failureaccess-1.0.1.jar"/>
+    	<pathelement location="${basedir}/lib/guava-27.1-jre.jar"/>
+    	<pathelement location="${basedir}/lib/listenablefuture-1.0.jar"/>
+    	<pathelement location="${basedir}/lib/okhttp-3.14.0.jar"/>
+    	<pathelement location="${basedir}/lib/okio-1.17.3.jar"/>    	
+    	<pathelement location="${basedir}/lib/opentracing-api-0.33.0.jar"/>
+    	<pathelement location="${basedir}/lib/opentracing-noop-0.33.0.jar"/>  
+    	<pathelement location="${basedir}/lib/opentracing-tracerresolver-0.1.7.jar"/> 
+    	<pathelement location="${basedir}/lib/opentracing-util-0.33.0.jar"/>  
+    	<pathelement location="${basedir}/lib/org.junit_4.13.0.v20200204-1500.jar"/>
+    	<pathelement location="${basedir}/lib/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
+    </path>		
     <target name="init">
         <mkdir dir="build/classes"/>
         <copy includeemptydirs="false" todir="build/classes">
@@ -75,6 +93,7 @@
             </fileset>
         </copy>    	
     </target>
+
     <target name="clean">
         <delete quiet="true">
         	<fileset dir="build/classes"/>
@@ -144,6 +163,62 @@
 	 
 		<!--删除xml的测试结果-->
 		<delete dir="${basedir}/testReport" quiet="true">
+			<include name="*.xml" />
+		</delete> 
+	</target>	
+
+
+    <target name="clean-selenium">
+        <delete quiet="true">
+        	<fileset dir="build/selenium/classes"/>
+        	<fileset dir="testReportSelenium"/>        	
+        </delete>
+    </target>	
+	
+    <target name="init-selenium">
+        <mkdir dir="build/selenium/classes"/>
+        <copy includeemptydirs="false" todir="build/selenium/classes">
+            <fileset dir="selenium">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy> 	
+    </target>	
+    <target depends="init-selenium" name="build-selenium-test">
+        <echo message="Build Selenium Test Class"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="build/selenium/classes" includeantruntime="false" source="${source}" target="${target}">
+            <src path="selenium"/>
+            <classpath refid="Web_Application.classpath"/>
+        	<classpath refid="Junit.libraryclasspath"/>
+        	<classpath refid="Selenium.libraryclasspath"/>
+        </javac>
+    </target>	
+	
+	<target name="seleniumtest" depends="clean-selenium, build-selenium-test"> 
+		<delete dir="${basedir}/testReportSelenium" quiet="true"/>
+		<mkdir dir="${basedir}/testReportSelenium" />
+	 	
+
+		<junit printsummary="yes"> 
+			<classpath refid="Junit.libraryclasspath"/> 
+			<classpath refid="Selenium.libraryclasspath"/>
+			<formatter type="xml"/> 
+			<batchtest todir="${basedir}/testReportSelenium"> 
+				<fileset dir="build/selenium/classes"> 
+					<include name="**/*Test.class"/> 
+				</fileset> 
+			</batchtest> 
+		</junit> 
+		
+
+		<junitreport todir="${basedir}/testReportSelenium"> 
+			<fileset dir="${basedir}/testReportSelenium">
+				<include name="TEST-*.xml"/> 
+			</fileset> 
+			<report format="frames" todir="${basedir}/testReportSelenium"/>
+		</junitreport> 
+	 
+
+		<delete dir="${basedir}/testReportSelenium" quiet="true">
 			<include name="*.xml" />
 		</delete> 
 	</target>	
