--- a/qa_assignment/.classpath
+++ b/qa_assignment/.classpath
@@ -56,6 +56,7 @@
 	<classpathentry kind="lib" path="lib/opentracing-noop-0.33.0.jar"/>
 	<classpathentry kind="lib" path="lib/opentracing-tracerresolver-0.1.7.jar"/>
 	<classpathentry kind="lib" path="lib/opentracing-util-0.33.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
